# NomaBot

./: .gitignore  IMPLEMENTATION.md  NOMABOT_BEHAVIOR.md  README.md  justfile  pyproject.toml
desktop/: pyproject.toml
desktop/src/nomabot_desktop/: __init__.py  __main__.py
desktop/src/nomabot_desktop/core/: app_context.py  asset_registry.py  bus.py  command_dispatcher.py  command_router.py  command_source.py  context_arbitrator.py  device_manager.py  events.py  lifecycle.py  logging_config.py  overlay_service.py  priority_queue.py  runtime.py  state_manager.py
desktop/src/nomabot_desktop/services/: __init__.py  activity.py  build_events.py  character.py  config.py  daily_routine.py  firmware_compat.py  friendship.py  life_mode.py  scheduler.py  season.py
desktop/src/nomabot_desktop/storage/: __init__.py  schema.py  service.py
desktop/src/nomabot_desktop/transport/: __init__.py  manager.py
desktop/src/nomabot_desktop/ui/: emulator.py  settings_dialog.py
desktop/tests/: test_activity.py  test_build_events.py  test_character_service.py  test_command_router.py  test_context_arbitrator.py  test_firmware_compat.py  test_friendship.py  test_integration.py  test_life_mode.py  test_priority_queue.py  test_runtime.py  test_state_manager.py  test_storage.py  test_transport_manager.py
sdk/: pyproject.toml
sdk/src/nomabot/: __init__.py
sdk/src/nomabot/assets/: behavior_compiler.py  compiler.py
sdk/src/nomabot/behavior/: __init__.py
sdk/src/nomabot/brain/: __init__.py
sdk/src/nomabot/cli/: main.py
sdk/tests/: test_activity_commands.py  test_assets.py  test_background_cache.py  test_behavior.py  test_behavior_compiler.py  test_brain.py  test_character_renderer_bands.py  test_dirty_tracker.py  test_emulator_sprite_mode.py  test_load_character.py  test_mock.py  test_overlay_manager.py  test_pack_clip_map.py  test_protocol.py  test_scene_builder.py  test_sprite_dirty_tracker.py
(+143 files in other folders)
