[project]
name = "nomabot-workspace"
version = "0.1.0"
description = "NomaBot monorepo workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["sdk", "desktop"]

[tool.uv.sources]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "jsonschema>=4.23",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["sdk/src", "desktop/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["sdk/tests", "desktop/tests"]
