[project]
name = "nomabot-desktop"
version = "0.3.0"
description = "NomaBot desktop control application"
requires-python = ">=3.13"
dependencies = [
    "nomabot",
    "PySide6>=6.8",
]

[project.scripts]
nomabot-desktop = "nomabot_desktop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nomabot_desktop"]

[tool.hatch.build.targets.editable]
packages = ["src/nomabot_desktop"]

[tool.uv.sources]
nomabot = { workspace = true }

[tool.ruff]
extend = "../pyproject.toml"
