[project]
name = "nomabot"
version = "0.1.0"
description = "NomaBot SDK — protocol, client, and developer tools"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "pillow>=11.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "jsonschema>=4.23"]

[project.scripts]
nomabot = "nomabot.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nomabot"]

[tool.hatch.build.targets.editable]
packages = ["src/nomabot"]

[tool.ruff]
extend = "../pyproject.toml"
